# Driving-Sim

./: .gitignore  CMakeLists.txt  README.md  build_script.sh  conanfile.txt
LaTeX/: compile.sh  driving_sim_report.tex  glossaire.tex  main.tex  report.tex
LaTeX/subpart/: 10_sujet_du_projet.tex  20_implementation_physique_modelisation_dyn_vehicule.tex  30_implementation_interface_graphique.tex  40_bilan_technique.tex
OldPhysics/: OldPhysics.cpp
src/: MagicFormula.h  TheLastOneISwear.cpp  VehiculeDynamics.cpp  VehiculeDynamics.h  VehiculeDynamics2.cpp  VehiculeDynamics2.h  car.cpp  car.h  circuit.cpp  circuit.h  data.txt  debugmode.cpp  dejavu_sans_mono_ttf.cpp  fpscounter.cpp  fpscounter.h  game.cpp  game.h  main.cpp  main.h  matplotlib_test.cpp  matplotlibcpp.h  old_main.cpp  plotting.cpp  surface.cpp  surface.h  tire  tire_model  utils.cpp  utils.h  vehicle.cpp  vehicle.h
src/GraphicsUtils/: ResourceType.h  RoadTextureGenerator.cpp  RoadTextureGenerator.h  SciCalcHelper.h  resourcetype.h  roadtexturegenerator.h  segmenttype.h  texturemanager.h
src/Headers/: SoftwareState.h  car.h  circuit.h  debugmode.h  fpscounter.h  game.h  main_classes.h  plotting.h  vehicle.h
src/Headers/GraphicsUtils/: arial_ttf.h  button.h  calculationhelper.h  constants.h  dejavu_sans_mono_ttf.h  fontmanager.h  resourcetype.h  roadtexturegenerator.h  texturemanager.h
src/Headers/Physics/: vehicle.h
src/oldPhysics/: MagicFormula.cpp  TheLastOneISwear.cpp  VehiculeDynamics.cpp  car.cpp  car.h  mainUnusedForNow.cpp  surface.cpp  utils.cpp  utils.h
srcPlots/: plotting.cpp  plotting.h  vehicle.cpp  vehicle.h
tests/: r4_integration_test.cpp  vehicle_test.cpp
